--- a/accounts/templates/accounts/user_page.html
+++ b/accounts/templates/accounts/user_page.html
@@ -2,8 +2,12 @@
 {% block body %}
 <!-- 기본적으로 django에서 제공하는 user와의 충돌을 피하기 위해서 user_info로 변경하였다. -->
   <h1>{{user_info.username}}님의 유저페이지입니다.</h1>
+  <h5>{{user_info.username}}를 팔로우하는 사람 {{user_info.followers.all}}</h5>
+  <h5>팔로워 : {{user_info.followers.all | length}}</h5>
+  <h5>{{user_info.username}}가 팔로우하는 사람{{user_info.followings.all}}</h5>
+  <h5>팔로잉 : {{user_info.followings.all | length}}</h5>
 
-  {% if user.is_authenticated %}
+  {% if user.is_authenticated and user != user_info %}
     <a href="{% url 'accounts:follow' user_info.id %}">팔로우</a>
   {% endif %}
 {% endblock %}
