--- a/posts/templates/posts/feed.html
+++ b/posts/templates/posts/feed.html
@@ -3,7 +3,9 @@
   <div class="container m-3">
     <div class="row d-flex justify-content-center">
       {% for post in posts %}
-        {% include 'posts/_post.html' %}
+        {% if post.user != user %}
+          {% include 'posts/_feed.html' %}
+        {% endif %}
       {% endfor %}
     </div>
   </div>
