--- a/posts/templates/posts/_feed.html
+++ b/posts/templates/posts/_feed.html
@@ -1,5 +1,5 @@
 {% load make_link %}
-<div class="card col-sm-3 mx-3 p-0">
+<div class="card col-6 mx-3 p-0 my-2">
   <!-- <a data-toggle="modal" data-target="#testModal" href=""> -->
   <a href="{% url 'posts:detail' post.id %}">
     <img src="{{post.image.url}}" class="card-img-top" alt="...">
@@ -19,9 +19,5 @@
     {% endif %}
     <a href=""><i class="far fa-comment"></i></a>
     <p class="mt-1 mb-0">좋아요 {{post.like_users.count}}개</p>
-    <form action="{% url 'posts:delete' post.id %}" method="post">
-      {% csrf_token %}
-      <input type="submit" value="삭제" class="btn">
-    </form>
   </div>
 </div>
