--- a/posts/templates/posts/_post.html
+++ b/posts/templates/posts/_post.html
@@ -1,5 +1,5 @@
 {% load make_link %}
-<div class="card col-sm-3 mx-3 p-0">
+<div class="card col-3 mx-3 p-0 my-2">
   <!-- <a data-toggle="modal" data-target="#testModal" href=""> -->
   <a href="{% url 'posts:detail' post.id %}">
     <img src="{{post.image.url}}" class="card-img-top" alt="...">
@@ -9,19 +9,5 @@
     <!-- hashtag_link(post) -->
     <p class="card-text">{{post|hashtag_link|safe}}</p>
   </div>
-  <div class="card-footer">
-    {% if user in post.like_users.all %}
-    <a href="{% url 'posts:like' post.id %}"><i class="fas fa-heart mr-1"></i></a>
-    <!-- {{post.like_users.count}} -->
-    {% else %}
-    <a href="{% url 'posts:like' post.id %}"><i class="far fa-heart mr-1"></i></a>
-    <!-- {{post.like_users.all | length}} -->
-    {% endif %}
-    <a href=""><i class="far fa-comment"></i></a>
-    <p class="mt-1 mb-0">좋아요 {{post.like_users.count}}개</p>
-    <form action="{% url 'posts:delete' post.id %}" method="post">
-      {% csrf_token %}
-      <input type="submit" value="삭제" class="btn">
-    </form>
-  </div>
+  
 </div>
