--- a/posts/templates/posts/pagination.html
+++ b/posts/templates/posts/pagination.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %}
+{% load bootstrap_pagination %}
 {% block body %}
   <div class="container m-3">
     <div class="row d-flex justify-content-center">
       {% for post in posts %}
-        {% include 'posts/_feed.html' %}
-      {% empty %}
-        <h1>피드가 없습니다.</h1>
+        {% include 'posts/_post.html' %}
       {% endfor %}
+    </div>
+    <div class="d-flex justify-content-center">
+      {% bootstrap_paginate posts %}
     </div>
   </div>
 {% endblock %}
